@@ -364,7 +364,7 @@ module  SExpr  = Toolchain.Batlib_Sexp_Conv
    @topic System
 *)
 
-module  Arg = Arg
+module  Arg = ExtArg.Arg
 module  File= Extlib.File
 module  OptParse = Extlib.OptParse
 (*module  Path:placeholder*)
