@@ -351,7 +351,7 @@ module  SExpr  = Toolchain.Batlib_Sexp_Conv
    {topic System}
 *)
 
-module Arg      = Batlib_Baselib_Arg
+module Arg      = Extlib.ExtArg.Arg
 module File     = Extlib.File
 module OptParse = Extlib.OptParse
 module Path     = Batlib_Baselib_Filename
